--- a/App/Represent/mobile/build.gradle
+++ b/App/Represent/mobile/build.gradle
@@ -4,10 +4,12 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
+    useLibrary 'org.apache.http.legacy'
+
     defaultConfig {
         applicationId "com.cs160.joleary.catnip"
         minSdkVersion 22
-        targetSdkVersion 23
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
