--- a/App/Represent/wear/src/main/AndroidManifest.xml
+++ b/App/Represent/wear/src/main/AndroidManifest.xml
@@ -33,4 +33,8 @@
         <activity android:name=".vote"></activity>
     </application>
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+
 </manifest>
